--- a/server_side/.env
+++ b/server_side/.env
@@ -1,5 +1,5 @@
 PORT=5000
-DB_CONNECTION=mongodb+srv://gity2755:nisy6742@cluster0.qktwfoy.mongodb.net/
+DB_CONNECTION=mongodb+srv://xxxxxxxxx:xxxxxxxx@cluster0.qktwfoy.mongodb.net/
 DB_NAME=libraryGitty
-JWT_SECRET = fgsdjdhfhsfhdhfjh
+JWT_SECRET = xxxxxxxxxxxxxx
  
